<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebCamTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="take_picture">拍照</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="start_record">开始录制</string>
    <string name="stop_record">停止录制</string>
    <string name="start_service">开启服务</string>
    <string name="stop_service">停止服务</string>
    <string name="ip_address">IP：</string>
    <string name="title_activity_web_cam">WebCamActivity</string>
    <string name="start_webcam">开启WebCam</string>
    <string name="toggle_camera">切换摄像头</string>
    <string name="toggle_flash">切换闪光灯</string>

</resources>
