<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="fill_parent"
        android:layout_height="280dip" />
    
    <Button
        android:id="@+id/take_picture_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/surface_view"
        android:onClick="onClick"
        android:text="@string/take_picture" />
    
    <Button
        android:id="@+id/toggle_camera_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/take_picture_btn"
        android:layout_toRightOf="@id/take_picture_btn"
        android:onClick="onClick"
        android:text="@string/toggle_camera" />
    
    <Button
        android:id="@+id/toggle_flash_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/take_picture_btn"
        android:layout_toRightOf="@id/toggle_camera_btn"
        android:onClick="onClick"
        android:text="@string/toggle_flash" />
    
    <Button
        android:id="@+id/start_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/take_picture_btn"
        android:onClick="onClick"
        android:text="@string/start_record" />
    
    <Button
        android:id="@+id/stop_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/start_record"
        android:layout_toRightOf="@id/start_record"
        android:onClick="onClick"
        android:text="@string/stop_record" />
    
    <Button
        android:id="@+id/start_webcam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_record"
        android:onClick="onClick"
        android:text="@string/start_webcam" />
    
</RelativeLayout>
