<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WebCamActivity" >

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="fill_parent"
        android:layout_height="280dip" />
    
    <Button
        android:id="@+id/start_service_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/surface_view"
        android:onClick="onClick"
        android:text="@string/start_service" />
    
    <Button
        android:id="@+id/stop_service_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/start_service_btn"
        android:layout_toRightOf="@id/start_service_btn"
        android:onClick="onClick"
        android:text="@string/stop_service" />
    
    <TextView
        android:id="@+id/ip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_service_btn"
        android:layout_marginTop="10dip"
        android:onClick="onClick"
        android:text="@string/ip_address" />

</RelativeLayout>
